Add dropdown to index, Reorganize images, Add images to artist page, Update artists content

--- a/MILESTONE 2/artists.html
+++ b/MILESTONE 2/artists.html
@@ -55,7 +55,7 @@
 			</section>
 			<section id="conductors" class="artist-section">
 				<h2>Conductors</h2>
-				<div class="artist">
+				<div class="artist" id="RaymondYong">
 					<div class="image">
 						<img src="artist_images/artist_overview/raymond_yong_condcutor.png" alt="Conductor: Raymond Yong" title="Raymond Yong" width="212" height="200">
 					</div>
@@ -69,26 +69,26 @@
 				</div> <!-- End of Artist -->
 				<div class="artist">
 					<div class="image">
-						<img src="artist_images/artist_overview/raymond_yong_condcutor.png" alt="Conductor: Raymond Yong" title="Raymond Yong" width="212" height="200">
+						<img src="artist_images/artist_overview/richard_mcintyre_condcutor.png" alt="Conductor: Richard McIntyre" title="Richard McIntyre" width="212" height="200">
 					</div>
 					<div class="summary">
-						<h3 class="name">Raymond Yong</h3>
-						<p class="info">Raymond Yong was born in Malaysia, emigrating to Australia at the age of two. He received his initial musical  training in Perth, performing regularly in public piano recitals from an early age. It was in High School that he first took to the podium as a . . .</p>
+						<h3 class="name">Richard McIntyre</h3>
+						<p class="info">Richard McIntyre sustains a long and distinguished career as a bassoonist, music educator, conductor and arranger. He developed these skills as he spent over 25 years working with the ANU School of Music and is now one of Australia's most respected . . .</p>
 					</div>
 					<a class="remove-link-lines" href="#"><div class="go-to-artist-btn">
 						<p>Visit the Artist's Page</p>
 					</div></a>
 				</div> <!-- End of Artist -->
 			</section>
-			<section id="vocal" class="artist-section">
-				<h2>Conductors</h2>
+			<section class="artist-section">
+				<h2>Musicians &amp; Vocalists</h2>
 				<div class="artist">
 					<div class="image">
-						<img src="artist_images/artist_overview/raymond_yong_condcutor.png" alt="Conductor: Raymond Yong" title="Raymond Yong" width="212" height="200">
+						<img src="artist_images/artist_overview/stefan_cassomenos.png" alt="Conductor: Raymond Yong" title="Raymond Yong" width="212" height="200">
 					</div>
 					<div class="summary">
-						<h3 class="name">Raymond Yong</h3>
-						<p class="info">Raymond Yong was born in Malaysia, emigrating to Australia at the age of two. He received his initial musical  training in Perth, performing regularly in public piano recitals from an early age. It was in High School that he first took to the podium as a . . .</p>
+						<h3 class="name">Stefan Cassomenos</h3>
+						<p class="info">Melbourne pianist, conductor and composer Stefan Cassomenos gives regular solo recitals throughout Australia, and has appeared as a soloist in Europe and Asia. In 2012 he was a grand finalist in the Rhodes International Piano Competetion and . . .</p>
 					</div>
 					<a class="remove-link-lines" href="#"><div class="go-to-artist-btn">
 						<p>Visit the Artist's Page</p>
@@ -96,11 +96,11 @@
 				</div> <!-- End of Artist -->
 				<div class="artist">
 					<div class="image">
-						<img src="artist_images/artist_overview/raymond_yong_condcutor.png" alt="Conductor: Raymond Yong" title="Raymond Yong" width="212" height="200">
+						<img src="artist_images/artist_overview/adam_lopez.png" alt="Artist: Stefan Cassomenos" title="Stefan Cassomenos" width="212" height="200">
 					</div>
 					<div class="summary">
-						<h3 class="name">Raymond Yong</h3>
-						<p class="info">Raymond Yong was born in Malaysia, emigrating to Australia at the age of two. He received his initial musical  training in Perth, performing regularly in public piano recitals from an early age. It was in High School that he first took to the podium as a . . .</p>
+						<h3 class="name">Adam Lopez</h3>
+						<p class="info">Adam Lopez’s has performed backing vocals for famous artists such as Mariah Carey, Keith Urban, and The Coors. His phenomenal vocal range has led him to break two Guinness World Records. This has allowed him to appear all over world performing . . .</p>
 					</div>
 					<a class="remove-link-lines" href="#"><div class="go-to-artist-btn">
 						<p>Visit the Artist's Page</p>
