--- a/MILESTONE 2/events.html
+++ b/MILESTONE 2/events.html
@@ -38,9 +38,10 @@
 	</header>
 	<div id="wrapper">	<!-- Container is used for pushing footer to the bottom -->
 		<div id="main-content">
+			<!-- There would be links to every conductor / special guest but I've only done links for pages that actually currently exist -->
 			<section id="upcoming-event">
 			    <h2>Upcoming Event</h2>
-			    <div class="event">
+			    <div class="event" id="world-of-music">
 				    <div class="title-location-date">
 					   	<h3 class="title">World Of Music</h3>
 					   	<h4 class="location">Townsville Civic Theatre</h4>
@@ -48,13 +49,13 @@
 					</div>
 					<div class="conductor">
 						<h4>Conductor</h4>
-						<img src="artist_images/no_artist_image.png" alt="Conductor Image Not Available" title="name" width="100" height="100">
+						<img src="artist_images/events/no_artist_image.png" alt="Conductor Image Not Available" title="name" width="100" height="100">
 						<p>Andrew Ryder</p>
 					</div>
 					<div class="artists">
 						<h4>Special Guests</h4>
 						<ul>
-							<li>Adam Lopez</li>
+							<li><a href="artists/adam_lopez.html">Adam Lopez</a></li>
 							<li>Domenico Taraborrelli</li>
 							<li>David Hudson</li>
 						</ul>
@@ -75,8 +76,8 @@
 					</div>
 					<div class="conductor">
 						<h4>Conductor</h4>
-						<img src="artist_images/no_artist_image.png" alt="Conductor Image Not Available" title="name" width="100" height="100">
-						<p>Raymond Yong</p>
+						<a href="artists/raymond_yong.html"><img src="artist_images/events/raymond_yong_small.png" alt="Raymond Yong Image" title="Raymong Yong" width="100" height="100"></a>
+						<a href="artists/raymong_yong.html"><p>Raymond Yong</p></a>
 					</div>
 					<div class="artists">
 						<h4>Special Guests</h4>
@@ -87,9 +88,10 @@
 					</div>
 					<div class="buttons">
 						<a href="events/world_of_music.html"><button type="button">Learn More</button></a>
+						<button type="button" class="bottombutton">Event Has No Gallery</button>
 					</div>	<!-- End of Buttons -->
 				</div> 	<!-- End of Event -->
-				<div class="event">
+				<div class="event even">
 				    <div class="title-location-date">
 					   	<h3 class="title">Last Night at the Proms</h3>
 					   	<h4 class="location">Townsville Civic Theatre</h4>
@@ -97,8 +99,8 @@
 					</div>
 					<div class="conductor">
 						<h4>Conductor</h4>
-						<img src="artist_images/no_artist_image.png" alt="Conductor Image Not Available" title="name" width="100" height="100">
-						<p>Richard McIntyre</p>
+						<a href="artists/richard_mcintyre.html"><img src="artist_images/events/richard_mcintyre_small.png" alt="Conductor Image Not Available" title="name" width="100" height="100"></a>
+						<p><a href="artists/richard_mcintyre.html">Richard McIntyre</a></p>
 					</div>
 					<div class="artists">
 						<h4>Special Guests</h4>
@@ -108,7 +110,7 @@
 					</div>
 					<div class="buttons">
 						<a href="events/world_of_music.html"><button type="button">Learn More</button></a>
-						<img src="button_images/ticket_shop.png" alt="Tickets Available at Ticketshop - Riverway Art Centre / Townsville Civic Theatre" title="TicketShop" width="366" height="70">
+						<a href="gallery/#last_night_at_the_proms"><button type="button" class="bottombutton">View Event Gallery</button></a>
 					</div>	<!-- End of Buttons -->
 				</div> 	<!-- End of Event -->
 				<div class="event">
@@ -119,18 +121,18 @@
 					</div>
 					<div class="conductor">
 						<h4>Conductor</h4>
-						<img src="artist_images/no_artist_image.png" alt="Conductor Image Not Available" title="name" width="100" height="100">
+						<img src="artist_images/events/no_artist_image.png" alt="Conductor Image Not Available" title="Mark Shiel" width="100" height="100">
 						<p>Mark Shiel</p>
 					</div>
 					<div class="artists">
 						<h4>Special Guests</h4>
 						<ul>
-							<li><a href="#">Stefan Cassomenos</a></li>
+							<li><a href="artists/stefan_cassomenos.html">Stefan Cassomenos</a></li>
 						</ul>
 					</div>
 					<div class="buttons">
 						<a href="events/world_of_music.html"><button type="button">Learn More</button></a>
-						<img src="button_images/ticket_shop.png" alt="Tickets Available at Ticketshop - Riverway Art Centre / Townsville Civic Theatre" title="TicketShop" width="366" height="70">
+						<button type="button" class="bottombutton">Event Has No Gallery</button>
 					</div>	<!-- End of Buttons -->
 				</div> 	<!-- End of Event -->
 			</section>
