Add our team drop down to all navs

--- a/MILESTONE 2/membership_form.html
+++ b/MILESTONE 2/membership_form.html
@@ -18,10 +18,16 @@
 	<header>
 		<img id="header-img" src="logos/barrier_reef_orchestra_logo.png" title="Barrier Reef Orchestra" alt="Barrier Reef Orchestra Logo" width="518" height="184">
 		<nav id="main-nav" class="nav">
-			<ul>
+			<ul class="primary-menu">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about_us.html">About Us</a></li>
-				<li><a href="#">Our Team</a></li>
+				<li>
+					<a href="#" >Our Team &#9662;</a>
+					<ul class="dropdown">
+						<li><a href="committee_and_supporters.html">Our Committee &amp; Supporters</a></li>
+						<li><a href="artists.html">Orchestra Artists</a></li>
+					</ul>
+				</li>	<!-- End of DropDown -->
 				<li><a href="events.html">Events</a></li>
 				<li><a href="#">Gallery</a></li>
 				<li><a href="newsfeed.html">Newsfeed</a></li>
@@ -140,10 +146,16 @@
 			</div>	<!-- End of Sponsor div -->
 			<div id="footer-nav" class="nav">
 				<h6 class="footer-title" id="nav-title">NAVIGATION</h6>
-				<ul>
+				<ul class="primary-menu">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about_us.html">About Us</a></li>
-					<li><a href="#">Our Team</a></li>
+					<li>
+						<a href="#" >Our Team &#9662;</a>
+						<ul class="dropdown">
+							<li><a href="committee_and_supporters.html">Our Committee &amp; Supporters</a></li>
+							<li><a href="artists.html">Orchestra Artists</a></li>
+						</ul>
+					</li>	<!-- End of DropDown -->
 					<li><a href="events.html">Events</a></li>
 					<li><a href="#">Gallery</a></li>
 					<li><a href="newsfeed.html">Newsfeed</a></li>
