Add rest of life members

--- a/MILESTONE 2/committee_and_supporters.html
+++ b/MILESTONE 2/committee_and_supporters.html
@@ -94,11 +94,72 @@
 				<div class="members">
 					<div class="member">
 						<div class="image">
-							<img src="life_member_images/alan-web.jpg" alt="Life Member: " title="Raymond Yong" width="212" height="200">
+							<img src="life_member_images/alan-web.jpg" alt="Life Member: Alan Nixon" title="Alan Nixon" width="212" height="200">
 						</div>
 						<div class="summary">
 							<h3 class="name">Alan Nixon</h3>
+							<h4 class="memberdate">Life Member Since May 2015</h4>
 							<p class="info">Alan has been Secretary of North Queensland Ensembles Inc. / Barrier Reef Orchestra for eight years. His expertise as a former Commonwealth Government officer served the Barrier Reef Orchestra well.</p>
+						</div>
+					</div> <!-- End of Member -->
+					<div class="member">
+						<div class="image">
+							<img src="life_member_images/jacinta-web.jpg" alt="Life Member: Jacinta Payne" title="Jacinta Payne" width="212" height="200">
+						</div>
+						<div class="summary">
+							<h3 class="name">Jacinta Payne</h3>
+							<h4 class="memberdate">Life Member Since May 2015</h4>
+							<p class="info">Jacinta played Clarinet at the very first Orchestra event on Sunday 29th October 2000. Over the years, through her teaching she has been able to encourage many new players to join the Orchestra and has mentored many woodwind players.</p>
+						</div>
+					</div> <!-- End of Member -->
+					<div class="member">
+						<div class="image">
+							<img src="life_member_images/stephen-web.jpg" alt="Life Member: Stephen Frewen-Lord" title="Stephen Frewen-Lord" width="212" height="200">
+						</div>
+						<div class="summary">
+							<h3 class="name">Stephen Frewen-Lord</h3>
+							<h4 class="memberdate">Life Member Since May 2015</h4>
+							<p class="info">Stephen was the concert master at the Orchestra's inaugural concert in 2000. Since then, he has had many discussions with guest conductors and artists concering the artistic direction of the orchestra.</p>
+						</div>
+					</div> <!-- End of Member -->
+					<div class="member">
+						<div class="image">
+							<img src="life_member_images/jenny-web.jpg" alt="Life Member: Jenny Carr" title="Jenny Carr" width="212" height="200">
+						</div>
+						<div class="summary">
+							<h3 class="name">Jenny Carr</h3>
+							<h4 class="memberdate">Life Member Since July 2010</h4>
+							<p class="info">Jenny Carr has been an integral part of the Townsville music scene as a music teach since the 70s. As the orchestra was being created Jenny worked with others to arrange a series of concerts for the emerging orchestra.</p>
+						</div>
+					</div> <!-- End of Member -->
+					<div class="member">
+						<div class="image">
+							<img src="life_member_images/carol-web.jpg" alt="Life Member: Carol Dall'Osto" title="Carol Dall'Osto" width="212" height="200">
+						</div>
+						<div class="summary">
+							<h3 class="name">Carol Dall'Osto</h3>
+							<h4 class="memberdate">Life Member Since July 2010</h4>
+							<p class="info">Carol has been a leading figure in music performances in Townsville for many years. She was a contributor to the formation of the Barrier Reef Orchestra, and was chairperson of the North Queensland Ensembles Committee.</p>
+						</div>
+					</div> <!-- End of Member -->
+					<div class="member">
+						<div class="image">
+							<img src="life_member_images/donna-web.jpg" alt="Life Member: Donna McMahon" title="Donna McMahon" width="212" height="200">
+						</div>
+						<div class="summary">
+							<h3 class="name">Donna McMahon</h3>
+							<h4 class="memberdate">Life Member Since July 2010</h4>
+							<p class="info">Donna has been a leader in the Townsville music community since 1975. She was a key contributor to the formation of the Barrier Reef Orchestra. She has also been a performer, rehearsal conductor, musical advisor, &amp; visting conductor liason.</p>
+						</div>
+					</div> <!-- End of Member -->
+					<div class="member centered">
+						<div class="image">
+							<img src="life_member_images/donna-web.jpg" alt="Life Member: David Pearse" title="David Pearse" width="212" height="200">
+						</div>
+						<div class="summary">
+							<h3 class="name">David Pearse</h3>
+							<h4 class="memberdate">Life Member Since June 2006</h4>
+							<p class="info">David was heavily involved with the Townsville music scene from the 1970s, including the formation of the Barrier Reef Orchestra in 1999.</p>
 						</div>
 					</div> <!-- End of Member -->
 				</div>
