Add about_us page, Add report page templates

--- a/MILESTONE 2/committee_and_supporters.html
+++ b/MILESTONE 2/committee_and_supporters.html
@@ -35,6 +35,12 @@
 				<li><a href="contact_us.html">Contact Us</a></li>
 			</ul>
 		</nav>
+		<nav id="breadcrumb">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li>Our Team - Committee &amp; Supporters</li>
+			</ul>
+		</nav>
 	</header>
 	<div id="wrapper">	<!-- Container is used for pushing footer to the bottom -->
 		<div id="main-content">
@@ -154,7 +160,7 @@
 					</div> <!-- End of Member -->
 					<div class="member centered">
 						<div class="image">
-							<img src="life_member_images/donna-web.jpg" alt="Life Member: David Pearse" title="David Pearse" width="212" height="200">
+							<img src="life_member_images/default.png" alt="Life Member: David Pearse" title="David Pearse" width="212" height="200">
 						</div>
 						<div class="summary">
 							<h3 class="name">David Pearse</h3>
