--- a/MILESTONE 2/about_us.html
+++ b/MILESTONE 2/about_us.html
@@ -38,7 +38,7 @@
 		<nav id="breadcrumb">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li>Our Team - Artists</li>
+				<li>About Us</li>
 			</ul>
 		</nav>
 	</header>
@@ -46,13 +46,16 @@
 		<div id="main-content">
 			<div id="side-nav">
 				<ul>
-					<li><a href="about_us.html" class="active">ABOUT US</a></li>
-					<li><a href="history/2011.html">2011 REPORT</a></li>
-					<li><a href="history/2012.html">2012 REPORT</a></li>
+					<!-- Currently Only 2013 REPORT works as I wanted to have an example for every part of the website and ran out of time to complete the other pages -->
+					<li><a href="../about_us.html">ABOUT US</a></li>	
+					<li><a href="#">2007 REPORT</a></li>				
+					<li><a href="#">2008 REPORT</a></li>
+					<li><a href="#">2009 REPORT</a></li>
+					<li><a href="#">2010 REPORT</a></li>
+					<li><a href="#">2011 REPORT</a></li>
+					<li><a href="#">2012 REPORT</a></li>
 					<li><a href="history/2013.html">2013 REPORT</a></li>
-					<li><a href="history/2014.html">2014 REPORT</a></li>
-				</ul>
-				
+				</ul>				
 			</div>	<!-- End of Side Nav -->
 			<section id="about-us">
 				<h2>About Us</h2>
