--- a/MILESTONE 2/history/2011.html
+++ b/MILESTONE 2/history/2011.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Page Title Here</title>
+	<title>2011 Report - Barrier Reef Orchestra</title>
 	<link href="../mainstyles.css" rel="stylesheet" type="text/css">
+	<link href="../aboutstyles.css" rel="stylesheet" type="text/css">
 	
 	<!-- Carousel -->
 	<script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
@@ -34,10 +35,25 @@
 				<li><a href="../contact_us.html">Contact Us</a></li>
 			</ul>
 		</nav>
+		<nav id="breadcrumb">
+			<ul>
+				<li><a href="../index.html">Home</a></li>
+				<li><a href="../about_us.html">About Us</a></li>
+				<li>2011 Report</li>
+			</ul>
+		</nav>
 	</header>
 	<div id="wrapper">	<!-- Container is used for pushing footer to the bottom -->
 		<div id="main-content">
-			<p>Content Would Go Here</p>
+			<div id="side-nav">
+				<ul>
+					<li><a href="about_us.html">ABOUT US</a></li>
+					<li><a href="history/2011.html" class="active">2011 REPORT</a></li>
+					<li><a href="history/2012.html">2012 REPORT</a></li>
+					<li><a href="history/2013.html">2013 REPORT</a></li>
+					<li><a href="history/2014.html">2014 REPORT</a></li>
+				</ul>				
+			</div>	<!-- End of Side Nav -->
 		</div>	<!-- End of Main -->
 		<div class="push"></div>
 	</div>	<!-- End of Container -->
