Add gallery drop down to every page, Add hot summer nights gallery

--- a/MILESTONE 2/index.html
+++ b/MILESTONE 2/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Barrier Reef Orchestra - Home</title>
+	<title>The Barrier Reef Orchestra</title>
 	
 	<link href="mainstyles.css" rel="stylesheet" type="text/css">
 	<link href="homestyles.css" rel="stylesheet" type="text/css">
@@ -31,7 +31,14 @@
 					</ul>
 				</li>
 				<li><a href="events.html">Events</a></li>
-				<li><a href="#">Gallery</a></li>
+				<li class="galleries">
+					<a href="#">Galleries &#9662;</a>
+					<ul class="dropdown">
+						<li><a href="gallery/last_night_of_the_proms.html">Last Night at the Proms</a></li>
+						<li><a href="gallery/hot_summer_nights.html">Hot Summer Nights</a></li>
+						<li><a href="gallery/slavonic_swoon.html">Slavonic Swoon</a></li>
+					</ul>
+				</li>	<!-- End of DropDown -->
 				<li><a href="newsfeed.html">Newsfeed</a></li>
 				<li><a href="support_us.html">Support Us</a></li>
 				<li><a href="contact_us.html">Contact Us</a></li>
@@ -169,11 +176,18 @@
 						</ul>
 					</li>
 					<li><a href="events.html">Events</a></li>
-					<li><a href="#">Gallery</a></li>
+					<li class="galleries">
+						<a href="#">Galleries &#9662;</a>
+						<ul class="dropdown">
+							<li><a href="gallery/last_night_of_the_proms.html">Last Night at the Proms</a></li>
+							<li><a href="gallery/hot_summer_nights.html">Hot Summer Nights</a></li>
+							<li><a href="gallery/slavonic_swoon.html">Slavonic Swoon</a></li>
+						</ul>
+					</li>	<!-- End of DropDown -->
 					<li><a href="newsfeed.html">Newsfeed</a></li>
 					<li><a href="support_us.html">Support Us</a></li>
 					<li><a href="contact_us.html">Contact Us</a></li>
-			</ul>
+				</ul>
 			</div> <!-- End of Footer Nav -->
 			<aside id="copyright-bar">
 				<p id="copyright-info">©Copyright North Queensland Ensembles Inc. 2017</p>
