--- a/MILESTONE 2/history/2013.html
+++ b/MILESTONE 2/history/2013.html
@@ -29,7 +29,14 @@
 					</ul>
 				</li>	<!-- End of DropDown -->
 				<li><a href="../events.html">Events</a></li>
-				<li><a href="#">Gallery</a></li>
+				<li class="galleries">
+					<a href="#">Galleries &#9662;</a>
+					<ul class="dropdown">
+						<li><a href="gallery/last_night_of_the_proms.html">Last Night at the Proms</a></li>
+						<li><a href="gallery/hot_summer_nights.html">Hot Summer Nights</a></li>
+						<li><a href="gallery/slavonic_swoon.html">Slavonic Swoon</a></li>
+					</ul>
+				</li>	<!-- End of DropDown -->
 				<li><a href="../newsfeed.html">Newsfeed</a></li>
 				<li><a href="../support_us.html">Support Us</a></li>
 				<li><a href="../contact_us.html">Contact Us</a></li>
@@ -218,7 +225,14 @@
 						</ul>
 					</li>	<!-- End of DropDown -->
 					<li><a href="events.html">Events</a></li>
-					<li><a href="#">Gallery</a></li>
+					<li class="galleries">
+						<a href="#">Galleries &#9662;</a>
+						<ul class="dropdown">
+							<li><a href="gallery/last_night_of_the_proms.html">Last Night at the Proms</a></li>
+							<li><a href="gallery/hot_summer_nights.html">Hot Summer Nights</a></li>
+							<li><a href="gallery/slavonic_swoon.html">Slavonic Swoon</a></li>
+						</ul>
+					</li>	<!-- End of DropDown -->
 					<li><a href="newsfeed.html">Newsfeed</a></li>
 					<li><a href="support_us.html">Support Us</a></li>
 					<li><a href="contact_us.html">Contact Us</a></li>
