Add galleries, Fix links to galleries

--- a/MILESTONE 2/gallery/last_night_at_the_proms.html
+++ b/MILESTONE 2/gallery/last_night_at_the_proms.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Hot Summer Nights Gallery - Barrier Reef Orchestra</title>
+	<title>Last Night at the Proms Gallery - Barrier Reef Orchestra</title>
 	<link href="../mainstyles.css" rel="stylesheet" type="text/css">	
 	<link href="gallerystyles.css" rel="stylesheet" type="text/css">
 	
@@ -29,7 +29,7 @@
 					</ul>
 				</li>	<!-- End of DropDown -->
 				<li><a href="../events.html">Events</a></li>
-				<li>
+				<li class="galleries">
 					<a href="#">Galleries &#9662;</a>
 					<ul class="dropdown">
 						<li><a href="last_night_at_the_proms.html">Last Night at the Proms</a></li>
@@ -45,176 +45,152 @@
 		<nav id="breadcrumb">
 			<ul>
 				<li><a href="../index.html">Home</a></li>
-				<li>Gallery - Hot Summer Nights</li>
+				<li>Gallery - Last Night at the Proms</li>
 			</ul>
 		</nav>
 	</header>
 	<div id="wrapper">	<!-- Container is used for pushing footer to the bottom -->
 		<div id="main-content">
    			<section id="hotsummernights">
-				<h2 class="title">Hot Summer Nights - 2008</h2>
+				<h2 class="title">Last Night at the Proms</h2>
 				<div class="slideshow-container">
 					<!-- Can't declare width as I want the image to keep its original ratio
 					I could go through and set the heights to match the current ratio, but I didn't have enough time -->
 					<div class="mySlides">
-						<div class="numbertext">1 / 32</div>
-						<img src="hot_summer_nights/img1.jpg" height="450">
+						<div class="numbertext">1 / 27</div>
+						<img src="last_night_of_the_proms/img1.jpg" height="450">
 					</div>
 
 					<div class="mySlides">
-						<div class="numbertext">2 / 32</div>
-						<img src="hot_summer_nights/img2.jpg" height="450">
+						<div class="numbertext">2 / 27</div>
+						<img src="last_night_of_the_proms/img2.jpg" height="450">
 					</div>
 
 					<div class="mySlides">
-						<div class="numbertext">3 / 32</div>
-						<img src="hot_summer_nights/img3.jpg" height="450">
+						<div class="numbertext">3 / 27</div>
+						<img src="last_night_of_the_proms/img3.jpg" height="450">
 					</div>
 
 					<div class="mySlides">
-						<div class="numbertext">4 / 32</div>
-						<img src="hot_summer_nights/img4.jpg" height="450">
+						<div class="numbertext">4 / 27</div>
+						<img src="last_night_of_the_proms/img4.jpg" height="450">
 					</div>
 
 					<div class="mySlides">
-						<div class="numbertext">5 / 32</div>
-						<img src="hot_summer_nights/img5.jpg" height="450">
+						<div class="numbertext">5 / 27</div>
+						<img src="last_night_of_the_proms/img5.jpg" height="450">
 					</div>
 
 					<div class="mySlides">
-						<div class="numbertext">6 / 32</div>
-						<img src="hot_summer_nights/img6.jpg" height="450">
+						<div class="numbertext">6 / 27</div>
+						<img src="last_night_of_the_proms/img6.jpg" height="450">
 					</div>
 
 					<div class="mySlides">
-						<div class="numbertext">7 / 32</div>
-						<img src="hot_summer_nights/img7.jpg" height="450">
+						<div class="numbertext">7 / 27</div>
+						<img src="last_night_of_the_proms/img7.jpg" height="450">
 					</div>
 
 					<div class="mySlides">
-						<div class="numbertext">8 / 32</div>
-						<img src="hot_summer_nights/img8.jpg" height="450">
+						<div class="numbertext">8 / 27</div>
+						<img src="last_night_of_the_proms/img8.jpg" height="450">
 					</div>
 
 					<div class="mySlides">
-						<div class="numbertext">9 / 32</div>
-						<img src="hot_summer_nights/img9.jpg" height="450">
+						<div class="numbertext">9 / 27</div>
+						<img src="last_night_of_the_proms/img9.jpg" height="450">
 					</div>
 					
 					<div class="mySlides">
-						<div class="numbertext">10 / 32</div>
-						<img src="hot_summer_nights/img10.jpg" height="450">
+						<div class="numbertext">10 / 27</div>
+						<img src="last_night_of_the_proms/img10.jpg" height="450">
 					</div>
 					
 					<div class="mySlides">
-						<div class="numbertext">11 / 32</div>
-						<img src="hot_summer_nights/img11.jpg" height="450">
+						<div class="numbertext">11 / 27</div>
+						<img src="last_night_of_the_proms/img11.jpg" height="450">
 					</div>
 
 					<div class="mySlides">
-						<div class="numbertext">12 / 32</div>
-						<img src="hot_summer_nights/img12.jpg" height="450">
+						<div class="numbertext">12 / 27</div>
+						<img src="last_night_of_the_proms/img12.jpg" height="450">
 					</div>
 
 					<div class="mySlides">
-						<div class="numbertext">13 / 32</div>
-						<img src="hot_summer_nights/img13.jpg" height="450">
+						<div class="numbertext">13 / 27</div>
+						<img src="last_night_of_the_proms/img13.jpg" height="450">
 					</div>
 
 					<div class="mySlides">
-						<div class="numbertext">14 / 32</div>
-						<img src="hot_summer_nights/img14.jpg" height="450">
+						<div class="numbertext">14 / 27</div>
+						<img src="last_night_of_the_proms/img14.jpg" height="450">
 					</div>
 
 					<div class="mySlides">
-						<div class="numbertext">15 / 32</div>
-						<img src="hot_summer_nights/img15.jpg" height="450">
+						<div class="numbertext">15 / 27</div>
+						<img src="last_night_of_the_proms/img15.jpg" height="450">
 					</div>
 
 					<div class="mySlides">
-						<div class="numbertext">16 / 32</div>
-						<img src="hot_summer_nights/img16.jpg" height="450">
+						<div class="numbertext">16 / 27</div>
+						<img src="last_night_of_the_proms/img16.jpg" height="450">
 					</div>
 
 					<div class="mySlides">
-						<div class="numbertext">17 / 32</div>
-						<img src="hot_summer_nights/img17.jpg" height="450">
+						<div class="numbertext">17 / 27</div>
+						<img src="last_night_of_the_proms/img17.jpg" height="450">
 					</div>
 
 					<div class="mySlides">
-						<div class="numbertext">18 / 32</div>
-						<img src="hot_summer_nights/img18.jpg" height="450">
+						<div class="numbertext">18 / 27</div>
+						<img src="last_night_of_the_proms/img18.jpg" height="450">
 					</div>
 
 					<div class="mySlides">
-						<div class="numbertext">19 / 32</div>
-						<img src="hot_summer_nights/img19.jpg" height="450">
+						<div class="numbertext">19 / 27</div>
+						<img src="last_night_of_the_proms/img19.jpg" height="450">
 					</div>
 
 					<div class="mySlides">
-						<div class="numbertext">20 / 32</div>
-						<img src="hot_summer_nights/img20.jpg" height="450">
+						<div class="numbertext">20 / 27</div>
+						<img src="last_night_of_the_proms/img20.jpg" height="450">
 					</div>
 
 					<div class="mySlides">
-						<div class="numbertext">21 / 32</div>
-						<img src="hot_summer_nights/img21.jpg" height="450">
+						<div class="numbertext">21 / 27</div>
+						<img src="last_night_of_the_proms/img21.jpg" height="450">
 					</div>
 
 					<div class="mySlides">
-						<div class="numbertext">22 / 32</div>
-						<img src="hot_summer_nights/img22.jpg" height="450">
+						<div class="numbertext">22 / 27</div>
+						<img src="last_night_of_the_proms/img22.jpg" height="450">
 					</div>
 
 					<div class="mySlides">
-						<div class="numbertext">23 / 32</div>
-						<img src="hot_summer_nights/img23.jpg" height="450">
+						<div class="numbertext">23 / 27</div>
+						<img src="last_night_of_the_proms/img23.jpg" height="450">
 					</div>
 
 					<div class="mySlides">
-						<div class="numbertext">24 / 32</div>
-						<img src="hot_summer_nights/img24.jpg" height="450">
+						<div class="numbertext">24 / 27</div>
+						<img src="last_night_of_the_proms/img24.jpg" height="450">
 					</div>
 
 					<div class="mySlides">
-						<div class="numbertext">25 / 32</div>
-						<img src="hot_summer_nights/img25.jpg" height="450">
+						<div class="numbertext">25 / 27</div>
+						<img src="last_night_of_the_proms/img25.jpg" height="450">
 					</div>
 
 					<div class="mySlides">
-						<div class="numbertext">26 / 32</div>
-						<img src="hot_summer_nights/img26.jpg" height="450">
+						<div class="numbertext">26 / 27</div>
+						<img src="last_night_of_the_proms/img26.jpg" height="450">
 					</div>
 
 					<div class="mySlides">
-						<div class="numbertext">27 / 32</div>
-						<img src="hot_summer_nights/img27.jpg" height="450">
+						<div class="numbertext">27 / 27</div>
+						<img src="last_night_of_the_proms/img27.jpg" height="450">
 					</div>
 
-					<div class="mySlides">
-						<div class="numbertext">28 / 32</div>
-						<img src="hot_summer_nights/img28.jpg" height="450">
-					</div>
-
-					<div class="mySlides">
-						<div class="numbertext">29 / 32</div>
-						<img src="hot_summer_nights/img29.jpg" height="450">
-					</div>
-
-					<div class="mySlides">
-						<div class="numbertext">30 / 32</div>
-						<img src="hot_summer_nights/img30.jpg" height="450">
-					</div>
-
-					<div class="mySlides">
-						<div class="numbertext">31 / 32</div>
-						<img src="hot_summer_nights/img31.jpg" height="450">
-					</div>
-
-					<div class="mySlides">
-						<div class="numbertext">32 / 32</div>
-						<img src="hot_summer_nights/img32.jpg" height="450">
-					</div>
 					<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 					<a class="next" onclick="plusSlides(1)">&#10095;</a>
 				</div>
@@ -252,7 +228,7 @@
 					</li>	<!-- End of DropDown -->
 					<li><a href="../events.html">Events</a></li>
 					<li class="galleries">
-					<a href="#">Galleries &#9662;</a>
+						<a href="#">Galleries &#9662;</a>
 						<ul class="dropdown">
 							<li><a href="last_night_at_the_proms.html">Last Night at the Proms</a></li>
 							<li><a href="hot_summer_nights.html">Hot Summer Nights</a></li>
