--- a/MILESTONE 2/history/2013.html
+++ b/MILESTONE 2/history/2013.html
@@ -32,9 +32,9 @@
 				<li class="galleries">
 					<a href="#">Galleries &#9662;</a>
 					<ul class="dropdown">
-						<li><a href="gallery/last_night_of_the_proms.html">Last Night at the Proms</a></li>
-						<li><a href="gallery/hot_summer_nights.html">Hot Summer Nights</a></li>
-						<li><a href="gallery/slavonic_swoon.html">Slavonic Swoon</a></li>
+						<li><a href="../gallery/last_night_at_the_proms.html">Last Night at the Proms</a></li>
+						<li><a href="../gallery/hot_summer_nights.html">Hot Summer Nights</a></li>
+						<li><a href="../gallery/slavonic_swoon.html">Slavonic Swoon</a></li>
 					</ul>
 				</li>	<!-- End of DropDown -->
 				<li><a href="../newsfeed.html">Newsfeed</a></li>
@@ -215,27 +215,27 @@
 			<div id="footer-nav" class="nav">
 				<h6 class="footer-title" id="nav-title">NAVIGATION</h6>
 				<ul class="primary-menu">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about_us.html">About Us</a></li>
+					<li><a href="../index.html">Home</a></li>
+					<li><a href="../about_us.html">About Us</a></li>
 					<li>
 						<a href="#" >Our Team &#9662;</a>
 						<ul class="dropdown">
-							<li><a href="committee_and_supporters.html">Our Committee &amp; Supporters</a></li>
-							<li><a href="artists.html">Orchestra Artists</a></li>
+							<li><a href="../committee_and_supporters.html">Our Committee &amp; Supporters</a></li>
+							<li><a href="../artists.html">Orchestra Artists</a></li>
 						</ul>
 					</li>	<!-- End of DropDown -->
 					<li><a href="events.html">Events</a></li>
 					<li class="galleries">
 						<a href="#">Galleries &#9662;</a>
 						<ul class="dropdown">
-							<li><a href="gallery/last_night_of_the_proms.html">Last Night at the Proms</a></li>
-							<li><a href="gallery/hot_summer_nights.html">Hot Summer Nights</a></li>
-							<li><a href="gallery/slavonic_swoon.html">Slavonic Swoon</a></li>
+							<li><a href="../gallery/last_night_of_the_proms.html">Last Night at the Proms</a></li>
+							<li><a href="../gallery/hot_summer_nights.html">Hot Summer Nights</a></li>
+							<li><a href="../gallery/slavonic_swoon.html">Slavonic Swoon</a></li>
 						</ul>
 					</li>	<!-- End of DropDown -->
-					<li><a href="newsfeed.html">Newsfeed</a></li>
-					<li><a href="support_us.html">Support Us</a></li>
-					<li><a href="contact_us.html">Contact Us</a></li>
+					<li><a href="../newsfeed.html">Newsfeed</a></li>
+					<li><a href="../support_us.html">Support Us</a></li>
+					<li><a href="../contact_us.html">Contact Us</a></li>
 				</ul>
 			</div> <!-- End of Footer Nav -->
 			<aside id="copyright-bar">
