Add pdf forms, Add form links to support us

--- a/MILESTONE 2/support_us.html
+++ b/MILESTONE 2/support_us.html
@@ -65,7 +65,7 @@
 						<li>Concession: $15</li>				
 					</ul>
 					<div class="form-btns">
-						<a href=""><button type="button" class="form-btn top-btn">Click Here for PDF Form</button></a>
+						<a href="forms/member_and_join_form.pdf" target="_blank" title="This link opens a pdf file in a new window"><button type="button" class="form-btn top-btn">Click Here for PDF Form</button></a>
 						<a href="forms/membership_form.html"><button type="button" class="form-btn">Click Here for Online Form</button></a>
 					</div>
 				</div>
@@ -81,16 +81,16 @@
 						</ul>
 					</div>
 					<div class="form-btns">
-						<button type="button" class="form-btn top-btn">Click Here for PDF Form</button>
-						<button type="button" class="form-btn">Click Here for Online Form</button>
+						<a href="forms/benefactor_form.pdf" target="_blank" title="This link opens a pdf file in a new window"><button type="button" class="form-btn top-btn">Click Here for PDF Form</button></a>
+						<a href="forms/benefactors_form.html"><button type="button" class="form-btn">Click Here for Online Form</button></a>
 					</div>
 				</div>
 				<div id="player" class="support-option-div">
 					<h3>Join the Orchestra</h3>
 					<p>As a community based Orchestra we are always looking for new members of the community to join us. We take community members on as musicians, fundraisers, and many other positions. If you feel that a position you could fill is not on the form please contact us via <strong><a href="mailto:brotownsville@gmail.com">brotownsville@gmail.com</a></strong> and let us know how you would like to help.</p>
 					<div class="form-btns">
-						<button type="button" class="form-btn top-btn">Click Here for PDF From</button>
-						<button type="button" class="form-btn">Click Here for Online Form</button>
+						<a href="forms/member_and_join_form.pdf" target="_blank" title="This link opens a pdf file in a new window"><button type="button" class="form-btn top-btn">Click Here for PDF From</button></a>
+						<a href="forms/join_the_orchestra_form.html"><button type="button" class="form-btn">Click Here for Online Form</button></a>
 					</div>
 				</div>
 				<aside>
